# NeuraTable

./: Cargo.toml  README.md  flake.nix
backend/: Cargo.toml
backend/src/: chunksize.rs  image_chunk_iterator.rs  image_processor.rs  lib.rs  model_runner.rs  model_value_range.rs
darktable/: neuratable.lua
desktop/: Cargo.toml
desktop/src/: image_utils.rs
