[package]
name = "desktop"
version = "0.1.0"
edition = "2021"
license = "GPLv3"

[dependencies]
pollster = "0.3.0"
backend = { path = "../backend" }
wonnx = { git = "https://github.com/mayjs/wonnx.git", branch = "feature/implement_conv_transpose" }
image = "0.24.2"
protobuf = { version = "2.27.1", features = ["with-bytes"] }
argh = "0.1.11"
env_logger = "0.10.0"
log = "0.4.19"
anyhow = "1.0"
